--- a/App/Catnip/mobile/src/main/res/layout/candidate_item.xml
+++ b/App/Catnip/mobile/src/main/res/layout/candidate_item.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:descendantFocusability="blocksDescendants">
 
     <ImageView
         android:layout_width="128dp"
@@ -27,7 +29,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="EMAIL"
-        android:id="@+id/textView4"
+        android:id="@+id/email"
         android:textStyle="bold"
         android:textColor="#1e88e5"
         android:layout_alignBottom="@+id/candicon"
@@ -38,9 +40,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="WEB"
-        android:id="@+id/textView5"
-        android:layout_alignTop="@+id/textView4"
-        android:layout_toEndOf="@+id/textView4"
+        android:id="@+id/web"
+        android:layout_alignTop="@+id/email"
+        android:layout_toEndOf="@+id/email"
         android:textStyle="bold"
         android:layout_marginLeft="80dp"
         android:textColor="#1e88e5" />
@@ -71,6 +73,7 @@
         android:id="@+id/twitter"
         android:layout_alignTop="@+id/twitterIcon"
         android:layout_toEndOf="@+id/twitterIcon"
-        android:layout_marginLeft="5dp" />
+        android:layout_marginLeft="5dp"
+        android:textSize="10dp" />
 
 </RelativeLayout>
