--- a/App/Catnip/mobile/src/main/res/layout/candidates.xml
+++ b/App/Catnip/mobile/src/main/res/layout/candidates.xml
@@ -8,18 +8,17 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/zip">
+        android:layout_alignParentLeft="true">
     </ListView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Your zipcode is: 99999"
-        android:id="@+id/zip"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="20dp" />
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:text="Your zipcode is: 99999"-->
+        <!--android:id="@+id/zip"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_margin="20dp" />-->
 
 </RelativeLayout>
